AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/OpenAI_Test__c.object-meta.xml
<CustomObject>
    <description>Each record contains an utterance and an intent. These are passed to OpenAI by Provar Automation to validate the utterance meaning against the intent.</description>
    <label>OpenAI Test</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>OpenAI Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpenAI Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>