AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <description>An intent that will be used by OpenAI to validate the meaning of the utterance.</description>
    <label>Intent</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>