AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Response_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Error_Message__c</fullName>
    <description>A more detailed error message that is returned by the OpenAI API is the Response_Status_Code is not 200.</description>
    <label>Response Error Message</label>
    <type>TextArea</type>
</CustomField>