AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <description>The HTTP response code after calling an OpenAI API endpoint.</description>
    <label>Response Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>