AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Response_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Message__c</fullName>
    <description>The HTTP response message after calling an OpenAI API endpoint.</description>
    <label>Response Status Message</label>
    <type>TextArea</type>
</CustomField>