AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <description>An utterance with a meaning that will be validated against the intent by OpenAI.</description>
    <label>Utterance</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>