AgentforceSFDX/force-app/main/default/objects/OpenAI_Test__c/fields/Utterance_Intent_Match__c.field-meta.xml
<CustomField>
    <fullName>Utterance_Intent_Match__c</fullName>
    <description>Indicates whether the Utterance&apos;s meaning matches the Intent.</description>
    <label>Utterance Intent Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>